--- a/employeesystem/templates/profile.html
+++ b/employeesystem/templates/profile.html
@@ -47,54 +47,59 @@
           </div>
         </div>
       </nav>
-
-      <form action="profile" method="POST">
-        {% csrf_token %}
-        <div class="container-fluid w-50 p-3 my-3" >
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">First Name</label>
-            <input type="text" name='first_name' id='first_name' class="form-control" >
-          </div>
-
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Last Name</label>
-            <input type="text" name="last_name" id='last_name' class="form-control">
-          </div>
-
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" name="email" name="email" class="form-control">
-          </div>
-
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Gender</label>
-            <input type="text" name="gender" id="gender" class="form-control">
-          </div>
-
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">address_pincode</label>
-            <input type="text" name="address_pincode" class="form-control" id="exampleFormControlInput1">
-          </div>
-
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">State</label>
-            <input type="text" name="state" id="state"class="form-control">
-          </div>
-
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">City</label>
-            <input type="text" name="city" id="city" class="form-control" >
-          </div>
-
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Department</label>
-            <input type="text" name="department" id="department" class="form-control">
-          </div>
-          <br>
-          <button type="submit" class="btn btn-success">Submit</button>
+      
+      <div class='container'>
+        
+        <form action='/profile' method='POST'>
+          {% csrf_token %}
           
-        </div>
-      </form>
+          
+          <div class="container-fluid w-50 p-3 my-3" >
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">First Name</label>
+              <input type="text" name='first_name' id='first_name' class="form-control" >
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Last Name</label>
+              <input type="text" name="last_name" id='last_name' class="form-control">
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Email</label>
+              <input type="email" name="email" name="email" class="form-control">
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Gender</label>
+              <input type="text" name="gender" id="gender" class="form-control">
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">address_pincode</label>
+              <input type="text" name="address_pincode" class="form-control" id="exampleFormControlInput1">
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">State</label>
+              <input type="text" name="state" id="state"class="form-control">
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">City</label>
+              <input type="text" name="city" id="city" class="form-control" >
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Department</label>
+              <input type="text" name="department" id="department" class="form-control">
+            </div>
+            <br>
+            <button type="submit" class="btn btn-success">Submit</button>
+
+          </div>
+        </form>
+    </div>
 
       
 
