--- a/employeesystem/templates/loginpage.html
+++ b/employeesystem/templates/loginpage.html
@@ -56,7 +56,7 @@ body, html {
 <main class="form-signin">
   <form action="loginpage" method="POST">
     {% csrf_token %}
-    <img class="mb-4" src="https://drive.google.com/file/d/17AfWgSHUkA7497K3rjf6AFjcVFDmiPbG/view?usp=sharing" alt="" width="110" height="90">
+    <img class="mb-4" src="https://i.pinimg.com/originals/4e/fd/fd/4efdfddc6dafa48064a41f9b6f1d6293.png" alt="" width="110" height="90">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
