--- a/employeesystem/templates/register.html
+++ b/employeesystem/templates/register.html
@@ -60,7 +60,7 @@ body, html {
   <form action="register" method="post">
       {% csrf_token %}
     {% csrf_token %}
-    <img class="mb-4" src="https://drive.google.com/file/d/17AfWgSHUkA7497K3rjf6AFjcVFDmiPbG/view?usp=sharing" alt="" width="72" height="57">
+    <img class="mb-4" src="https://i.pinimg.com/originals/4e/fd/fd/4efdfddc6dafa48064a41f9b6f1d6293.png" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
