--- a/employeesystem/templates/loginpage.html
+++ b/employeesystem/templates/loginpage.html
@@ -54,7 +54,7 @@ body, html {
 
 <div class="container my-4">
 <main class="form-signin">
-  <form action="loginpage" method="POST">
+  <form action="home" method="POST">
     {% csrf_token %}
     <img class="mb-4" src="https://i.pinimg.com/originals/4e/fd/fd/4efdfddc6dafa48064a41f9b6f1d6293.png" alt="" width="110" height="90">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
