--- a/employeesystem/templates/profile.html
+++ b/employeesystem/templates/profile.html
@@ -8,37 +8,24 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>E-Network</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">E-Network</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">MyProfile</a>
+                <a class="nav-link" href="http://127.0.0.1:8000/profile">MyProfile</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
+              
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -57,45 +44,45 @@
           <div class="container-fluid w-50 p-3 my-3" >
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">First Name</label>
-              <input type="text" name='first_name' id='first_name' class="form-control" >
+              <input type="text" name='first_name' id='first_name' class="form-control" disabled readonly placeholder="Sanjograj" >
             </div>
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Last Name</label>
-              <input type="text" name="last_name" id='last_name' class="form-control">
+              <input type="text" name="last_name" id='last_name' class="form-control" disabled readonly placeholder="Ahuja">
             </div>
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Email</label>
-              <input type="email" name="email" name="email" class="form-control">
+              <input type="email" name="email" name="email" class="form-control" disabled readonly placeholder="Sanjograj2@gmail.com">
             </div>
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Gender</label>
-              <input type="text" name="gender" id="gender" class="form-control">
+              <input type="text" name="gender" id="gender" class="form-control" disabled readonly placeholder="Male">
             </div>
 
             <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">address_pincode</label>
-              <input type="text" name="address_pincode" class="form-control" id="exampleFormControlInput1">
+              <label for="exampleFormControlInput1" class="form-label">pincode</label>
+              <input type="text" name="pincode" class="form-control" id="exampleFormControlInput1" disabled readonly placeholder="110005">
             </div>
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">State</label>
-              <input type="text" name="state" id="state"class="form-control">
+              <input type="text" name="state" id="state"class="form-control" disabled readonly placeholder="New Delhi">
             </div>
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">City</label>
-              <input type="text" name="city" id="city" class="form-control" >
+              <input type="text" name="city" id="city" class="form-control" disabled readonly placeholder="Delhi">
             </div>
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Department</label>
-              <input type="text" name="department" id="department" class="form-control">
+              <input type="text" name="department" id="department" class="form-control" disabled readonly placeholder="HR">
             </div>
             <br>
-            <button type="submit" class="btn btn-success">Submit</button>
+          
 
           </div>
         </form>
