--- a/employeesystem/templates/home.html
+++ b/employeesystem/templates/home.html
@@ -10,6 +10,66 @@
 
     <title>E-Network</title>
   </head>
+  <style>
+    .col-md-3
+          {
+          display: inline-block;
+          margin-left:-4px;
+          }
+
+          .carousel-indicators .active {
+          background-color: black;
+            }
+
+          .col-md-3 img{
+
+          min-width: 227px;
+          height: 200px;
+          }
+
+
+          body .carousel-indicator li{
+          background-color: black;
+          }m
+
+          body .carousel-indicators{
+          bottom: 0;
+          }
+
+
+          body .carousel-control-prev-icon,
+          body .carousel-control-next-icon{
+          background-color: black;
+          }
+          body.container{
+          text-transform: capitalize;
+          }
+
+          .ignore-css{all:unset;}
+
+          #video{
+            object-fit: initial;
+            width: 1950px;
+            height: 657px;
+          }
+
+
+          .carousel-inner{
+          margin: auto;
+          width: 60%;
+          padding: 10px;
+          }
+          .carousel-control-prev,
+          .carousel-control-next{
+          top: auto;
+          bottom: auto;
+          padding-top:225px;
+          }
+           body .no-padding{
+           padding-left: 0,
+           padding-right: 0;
+           }
+  </style>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -75,7 +135,80 @@
           </ul>
         </div>
       </div>
+      <div class=" my-4 container" >
+        <center><strong><h2><i>Upcoming Events</strong></i></h2></center>
+        
+        {% for pro,range,slides in allprods %}
+          <div class="container my-4">
       
+            <h3 style="
+          text-transform: capitalize;
+          font-family: Monaco;
+      ">
+          </div>
+            <div class="row">
+          <div id="demo{{forloop.counter}}" class="col carousel slide my-3" data-ride="carousel">'
+              <ul class="carousel-indicators">
+                  <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
+          {% for i in range %}
+             <li data-target="#demo{{forloop.parentloop.counter}}" data-slide-to="{{i}}" ></li>
+          {% endfor %}
+      </ul>
+      
+      
+      <!--        slideshow starts here-->
+      
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+      
+                  {% for i in pro|slice:"0:" %}
+                  <div class="col-xs-3 col-sm-3 col-md-3 ">
+                    <div class="card" style="width: 18rem;">
+                     
+                      <div class="card-body">
+                        <h5 class="card-title" id="namepr{{i.id}}">{{i.city}}</h5>
+                        <p class="card-text">Coming Soon</p>
+                          <span id="divpr{{i.id}}" class="di">
+                        <button id="pr{{i.id}}"  type="button" class="btn btn-dark cart">Join Event</button>
+                          </span>
+                         <a href="shop/productview/{{i.id}}"><button id="pv{{i.id}}" type="button" class="btn btn-dark">View Details</button></a>
+                      </div>
+                    </div>
+                  </div>
+      
+                  {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
+                   </div><div class="carousel-item">
+                  {% endif%}
+      
+                  {% endfor %}
+            </div>
+      
+            </div>
+              </div>
+      
+      
+      <a class="carousel-control-prev " href="#demo{{forloop.counter}}" role="button" data-slide="prev">
+         <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#demo{{forloop.counter}}" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+            </div>
+        {% endfor %}
+      </div>
+      <div class="bg-dark text-secondary px-1 py-3 text-center">
+        <div class="py-2">
+          <h1 class="display-5 fw-bold text-white">Connect With Us</h1>
+          <div class="col-lg-6 mx-auto">
+            <p class="fs-5 mb-4">© 2017–2021 E-Network, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a><</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+              
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
